got menu working, started on background for menu, added about and resume page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,52 @@ a {
   box-sizing: border-box;
 }
 
+.site-header {
+  display: grid;
+  padding: 5px 30px 5px 30px;
+  grid-template-columns: 60% 30% 10%;
+}
+
+.name {
+  grid-column: 1;
+}
+
+.nav {
+  grid-column: 3;
+}
+
+#flyoutMenu {
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../testbackground.png');
+  background-position: left;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+  overflow: scroll;
+  z-index: 1000;
+}
+
+#flyoutMenu.hide {
+  transform: translate3d(-100vw, 0, 0);
+}
+
+#flyoutMenu.show {
+  transform: translate3d(0vw, 0, 0);
+  overflow: hidden;
+}
+
+#flyoutMenu h2 a {
+  color: #FFFFFF;
+  margin: 30px 0px 0px 30px;
+  text-decoration: none;
+}
+
+#flyoutMenu h2 a:hover {
+  text-decoration: underline;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
